--- a/linux_scripts/data_processing.ipynb
+++ b/linux_scripts/data_processing.ipynb
@@ -14,6 +14,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Processing Function\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -52,6 +59,13 @@
     "    print(f'The t-statistic is: {t_stat}')\n",
     "    # print(f'The confidence interval is: {conf_int}')\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Results\n"
    ]
   },
   {
